--- a/src/components/popover/SignUpPopover.scss
+++ b/src/components/popover/SignUpPopover.scss
@@ -1,6 +1,6 @@
 @import "../../SCSSVARS.scss";
 
-.right-link {
+.default-link {
   font-weight: 700;
   text-decoration: none;
   // color: rgb(168, 140, 89);
@@ -11,7 +11,7 @@
   /* letter-spacing: 0.6px; */
 }
 
-.right-link:hover {
+.default-link:hover {
   // color: rgb(190, 185, 167);
   color: rgb(192, 181, 161);
   cursor: pointer;
@@ -242,7 +242,7 @@
 // }
 
 @media screen and (min-width: 280px) and (max-width: 768px) {
-  .right-link {
+  .default-link {
     // visibility: hidden;
     // width: 0;
     font-size: 14px;
