--- a/src/components/yearTimer/YearTimer.scss
+++ b/src/components/yearTimer/YearTimer.scss
@@ -5,23 +5,38 @@
   //   content: "\2591";
   color: rgb(218, 203, 155);
   width: fit-content;
-  font-size: 19px;
+  font-size: 22px;
 }
 
 .timer-container {
   display: flex;
   flex-flow: column;
+  width: fit-content;
+  max-width: 18rem;
 }
 
 .timer-progress-bar {
-  width: 100%;
+  width: fit-content;
   display: flex;
 }
 
 .timer-header {
-  font-size: 14px;
-  color: rgb(199, 172, 125);
+  font-size: 15px;
+  color: rgb(177, 148, 98);
   font-weight: 500;
   // font-style: italic;
   letter-spacing: 0.3px;
+  text-align: center;
+}
+
+.timer-quote {
+  margin-top: 0.3rem;
+  color: rgb(179, 145, 85);
+  font-size: 14px;
+  text-align: center;
+}
+
+.timer-quote-box {
+  display: flex;
+  flex-flow: column;
 }
