--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "./SCSSVARS.scss";
+
 * {
   margin: 0px;
   padding: 0px;
@@ -6,4 +8,44 @@
   // font-family: "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans",
   //   "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   //   "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.default-span {
+  font-weight: 600;
+  color: grey;
+  font-style: italic;
+}
+
+.default-empty-font {
+  font-weight: 600;
+  color: $web-font-color;
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+}
+
+.default-link {
+  font-weight: 700;
+  text-decoration: none;
+  // color: rgb(168, 140, 89);
+  color: rgb(138, 117, 81);
+  font-size: 15px;
+  // color: rgb(168, 140, 89);
+  /* font-family: "roboto"; */
+  /* letter-spacing: 0.6px; */
+}
+
+.default-link:hover {
+  // color: rgb(190, 185, 167);
+  color: rgb(192, 181, 161);
+  cursor: pointer;
+}
+
+@media screen and (min-width: 280px) and (max-width: 768px) {
+  .default-link {
+    // visibility: hidden;
+    // width: 0;
+    font-size: 14px;
+    margin-left: 0.6rem;
+  }
 }
