--- a/src/pages/allWordsPage/WordsPage.scss
+++ b/src/pages/allWordsPage/WordsPage.scss
@@ -1,14 +1,18 @@
 @import "../../SCSSVARS.scss";
 
-.word-container {
+.all-words-page-container {
   width: 100%;
   overflow-y: auto;
   padding: 1rem;
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
+}
+
+.all-words-page-word-def {
+  margin: 1rem;
 }
 
 .all-words-page-loading-page {
@@ -41,9 +45,9 @@
 }
 
 @media screen and (min-width: 540px) and (max-width: 767px) {
-  .word-container {
+  .all-words-page-container {
     justify-content: center;
-    padding: 1rem 0rem 0rem 0rem;
+    padding: 1rem 0rem 0rem 2rem;
   }
 
   .word-page-definition-box {
@@ -56,9 +60,9 @@
     max-width: 17.5rem;
     min-width: 17.5rem;
   }
-  .word-container {
+  .all-words-page-container {
     justify-content: center;
-    padding: 1rem 0rem 0rem 0rem;
+    padding: 1rem 0rem 0rem 2rem;
   }
 }
 
