feature: added delete button, added page not found

--- a/src/SCSSVARS.scss
+++ b/src/SCSSVARS.scss
@@ -5,3 +5,9 @@ $web-font-color: rgb(168, 140, 89) !default;
 $web-default-color: rgb(82, 82, 82) !default;
 
 $spinner-default-color: rgb(141, 119, 78) !default;
+
+$confirm-btn-background-color: rgb(206, 192, 148);
+$confirm-btn-font-color: rgb(255, 255, 255);
+
+$cancel-btn-background-color: rgb(255, 255, 255);
+$cancel-btn-font-color: rgb(163, 163, 163);
