--- a/src/components/wordDefinition/WordDefinition.scss
+++ b/src/components/wordDefinition/WordDefinition.scss
@@ -33,6 +33,7 @@
   display: flex;
   margin-top: 1rem;
   padding-right: 0.1rem;
+  padding-bottom: 0.2rem;
 }
 
 .save-btn {
@@ -47,13 +48,21 @@
 }
 
 .word-definition-dlt-btn {
-  font-size: 1.3rem;
-  margin-left: auto;
+  font-size: 1.2rem;
+  height: 28.9px;
+}
+
+.word-definition-dlt-btn-wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  max-height: 28.9px;
+  // margin-bottom: 0.2rem;
 }
 
 .word-definition-dlt-popover-wrapper {
-  margin-left: auto;
-  margin-bottom: 2.2px;
+  // margin-bottom: 0.2px;
 }
 
 .word-definition-examples {
