--- a/src/components/button/DeleteConfirmationButton.scss
+++ b/src/components/button/DeleteConfirmationButton.scss
@@ -11,6 +11,14 @@
   background-color: lightgray;
 }
 
+.delete-confirm-spinner {
+  margin-right: 4px;
+  height: 14px !important;
+  width: 14px !important;
+  font-size: 16px !important;
+  color: $confirm-btn-font-color;
+}
+
 .delete-confirm-cancel-btn,
 .delete-confirm-cfm-btn {
   border: 0.375px solid lightgray;
@@ -20,6 +28,8 @@
 }
 
 .delete-confirm-cfm-btn {
+  display: flex;
+  align-items: center;
   background-color: $confirm-btn-background-color;
   color: $confirm-btn-font-color;
   border-top-left-radius: 0.375rem;
