--- a/src/main.scss
+++ b/src/main.scss
@@ -16,3 +16,6 @@ $body-color: $web-default-color;
 @import "../node_modules/bootstrap/scss/root";
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+
+@import "bootstrap/scss/bootstrap";
