--- a/src/components/toast/Toaster.scss
+++ b/src/components/toast/Toaster.scss
@@ -1,7 +1,7 @@
-@use '../../SCSSVARS' as *;
+@import "../../SCSSVARS";
 
 .toast-body-text {
-    color: $web-font-color
+  color: $web-font-color;
 }
 
 // #toaster {
